# Near-CrowdFund

Crowdfunding/: Cargo.toml
Crowdfunding/src/: lib.rs
app/: package-lock.json  package.json
app/src/: firebase.js
app/src/components/: Create.js  EmailLoginForm.js  Footer.js  Home.js  Login.js  Navbar.js  Signup.js
app/src/contexts/: AuthContext.js
app/src/pages/: index.js
