[package]
name = "CrowdFunding"
version = "0.1.0"
edition = "2021"
description = "A blockchain-based crowdfunding contract on NEAR"
repository = "https://github.com/sanjeevvarma/blockchain-crowdfunding"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.13.1-rust-1.83.0"
image_digest = "sha256:cc80ff2f2a42823ffd991eaf45ea9fada71ee206d79561eea4f40ecc27bff1be"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[dependencies]
near-contract-standards = "5.5.0"
near-sdk = "5.0.0"
borsh = "1.5.1"
borsh-derive = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8.21"

[dev-dependencies]
near-sdk = { version = "5.7.0", features = ["unit-testing"] }
near-workspaces = { version = "0.16.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
